# sync-airbnb

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  ChatGPT-Airbnb Poller overview.md  Dockerfile  Makefile  README.md  config.py  create_account.py  debug_preflight.py  dev-requirements.txt  docker-compose.yml  entrypoint.sh  main.py  preflight_response.html  pyproject.toml  pytest.ini  requirements.txt  test_create_account.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 459a750c803a_convert_time_to_date_unique_constraints.py  8521f7bed1ac_create_airbnb_performance_tables.py  b173c060e492_add_soft_delete_to_accounts.py  c8fc3d1477cb_create_airbnb_schema_with_account_.py  caf75040fccc_remove_x_airbnb_client_trace_id_column_.py
db/: insights.py  metrics.py
docs/: 2025-10-context.md  ARCHITECTURE.md  REPOSITORY_SETUP.md  api-versioning.md  implementation-status.md  multi-tenant-usage.md
flatteners/: insights.py  listings.py  metrics.py  utils.py
network/: http_headers.py
parsers/: insights.py
payloads/: insights.py  listings.py  metrics.py
pollers/: airbnb.py  insights.py
schemas/: listings_section.schema.json  parsed_chart_summary.schema.json  parsed_list_of_metrics.schema.json
services/: insights.py
sync_airbnb/: config.py  dependencies.py  main.py  metrics.py
sync_airbnb/api/: errors.py
sync_airbnb/db/: insights.py
sync_airbnb/flatteners/: insights.py  listings.py  utils.py
sync_airbnb/middleware/: request_id.py
sync_airbnb/models/: account.py  chart_query.py  chart_summary.py  list_of_metrics.py
sync_airbnb/network/: http_client.py  http_headers.py  preflight.py
sync_airbnb/parsers/: insights.py
tasks/: api-authentication.md  cookie-and-session-strategy.md  credential-error-detection.md  credential-validation.md  data-retention-policy.md  job-status-tracking.md  kubernetes-operator.md  p0-critical.md  p1-high.md  p2-medium.md  p3-low.md  rate-limiting-strategy.md
tests/: conftest.py
utils/: airbnb_sync.py  date_window.py  logger.py  logging.py
(+50 files in other folders)
