[project]
name = "sync-airbnb"
version = "0.1.0"
description = "Sync Airbnb insights data to TimescaleDB"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = false
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

# Ignore test files
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Ignore alembic migrations
[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

# Third-party libraries without stubs
[[tool.mypy.overrides]]
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

# Ignore deprecated/to-be-deleted files
[[tool.mypy.overrides]]
module = "sync_airbnb.pollers.insights"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''

[tool.coverage.run]
source = ["sync_airbnb"]
omit = [
    "tests/*",
    "alembic/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
